<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnmlVoices App</string>
    <string name="logo_text">How many?</string>
    <string name="hint_1" translatable="false">number1</string>
    <string name="hint_2" translatable="false">number2</string>
    <string name="nextPage" translatable="false">Next Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dogVoice">woof-woof</string>
    <string name="animal_image">Зображення тварини</string>
    <string name="play_sound">Відтворити звук</string>
    <string name="play_sound_1">Звук 1</string>
    <string name="play_sound_2">Звук 2</string>
    <string name="add_animal">Додати тварину</string>
    <string name="cat">Кіт</string>
    <string name="cow">Корова</string>
    <string name="dog">Собака</string>
    <string name="back">Назад</string>
    <string name="ukrainian">Українська мова</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="chicken">Курка</string>
    <string name="pig">Свиня</string>
    <string name="sound_description">%s каже так:</string>
    <!-- Звуки тварин -->
    <string name="cat_sound">Мяу-мяу</string>
    <string name="dog_sound">Гав-гав</string>
    <string name="cow_sound">Му-у-у</string>
    <string name="chicken_sound">Ко-ко-ко</string>
    <string name="pig_sound">Хрю-хрю</string>
</resources>