<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/animalImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_button"
        android:padding="8dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00FFFFFF"
        android:padding="16dp"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/playSound1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/play_sound_1"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/secondary_color"/>

        <Button
            android:id="@+id/playSound2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_sound_2"
            android:textColor="@color/text_color"
            android:backgroundTint="@color/secondary_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color"
        android:backgroundTint="@color/secondary_color"/>

</LinearLayout>